<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_statistics"
        android:icon="@drawable/ic_show_chart_white_24dp"
        android:title="@string/statistic"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_scoreboard"
        android:icon="@drawable/ic_description_white_24dp"
        android:title="@string/scoreboard"
        app:showAsAction="ifRoom"/>
</menu>