<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_grey600_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer_grey600_24dp"
            android:title="@string/timer"/>

    </group>

    <group
        android:id="@+id/nav_group_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@drawable/ic_help_grey600_24dp"
            android:title="@string/help"/>

    </group>

</menu>
